[LCR-159] refactor: 알림 전송 타겟 사용자 ID 조회 쿼리 수정